# jnp1-worldcup

./: .clang-format  .gitignore  CMakeLists.txt  readme.md  worldcup2022.h  worldcup_example.cc  worldcup_kryteria.md  worldcup_tresc.md
src/: board.h  common.h  defaultScoreboard.h  field.h  fields.h  player.h  worldcup.h  worldcup2022.h  worldcup_example.cc
