cmake_minimum_required(VERSION 3.16)
project(jnpq_worldcup)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS
        "${CMAKE_CXX_FLAGS} -Wfatal-errors -Wall -Wextra -Wpedantic -O2"
        )

include_directories(.)

add_executable(jnp1_worldcup
        worldcup_example.cc
        worldcup.h)

add_custom_target(format
        COMMAND /usr/bin/clang-format
        -i
        organism.h
        )
